Added footer link to pages.

--- a/TypeScriptDemo/pages/hello-world.html
+++ b/TypeScriptDemo/pages/hello-world.html
@@ -38,3 +38,4 @@
         </div>
     </div>
 </div>
+<span class="footer-section">View the full source for this presentation at: <a href="https://github.com/jp-wf/typescript-demo" target="_blank">https://github.com/jp-wf/typescript-demo</a></span>
