--- a/TypeScriptDemo/pages/testing.html
+++ b/TypeScriptDemo/pages/testing.html
@@ -29,13 +29,11 @@
         <p>
             As mentioned earlier in the presentation, Jasmine is a JavaScript testing framework that works well for developing unit tests for front-end code.  The behavior-driven nature of Jasmine lends itself to
             intuitive definition of unit tests.  Below is the test spec for the PageViewer class.  Since the type definition for Jasmine was imported, the test specs look almost identical to what they would look like in JavaScript.  
-            There are a couple exceptions such as the definition of functions using arrow notation and the import statements at the top of the test.  The test spec is transpiled into JavaScript before it is run through the test runner,
-            just like the application code.
+            The test spec is transpiled into JavaScript before it is run through the test runner, just like the application code.
         </p>        
         <p>
-            Jasmine includes a standalone test runner, which is embedded on the next page of the presentation.  This works well for visualization of test status while developing code and tests.  For automated testing, there are
-            a number of solutions that integrate with Jasmine.  Most notable is the test runner developed by Google that was used for Angular.  <a href="https://karma-runner.github.io/" target="_blank">Karma</a> allows
-            for the running of tests from several testing frameworks.  It supports both a visual mode and lights out operation.  It can be integrated with task runnner tools such as Grunt and Gulp. It also generates common output formats
+            Jasmine includes a standalone test runner, which works well for visualization of test status while developing code and tests.  For automated testing, there are a number of solutions that integrate with Jasmine.  
+            A good example of such is <a href="https://karma-runner.github.io/" target="_blank">Karma</a> which allows for the running of tests from several testing frameworks.  It supports both a visual mode and lights out operation.  It can be integrated with task runnner tools such as Grunt and Gulp. It also generates common output formats
             that can provide build time status of unit tests including code coverage metrics.  These formats can be loaded and included with build status in products like <a href="https://jenkins.io/" target="_blank">Jenkins</a>.
         </p>
         <table cellpadding="0" cellspacing="0">
@@ -60,3 +58,4 @@
         </div>
     </div>
 </div>
+<span class="footer-section">View the full source for this presentation at: <a href="https://github.com/jp-wf/typescript-demo" target="_blank">https://github.com/jp-wf/typescript-demo</a></span>
