--- a/TypeScriptDemo/pages/references.html
+++ b/TypeScriptDemo/pages/references.html
@@ -37,3 +37,4 @@
         </ul>
     </div>
 </div>
+<span class="footer-section">View the full source for this presentation at: <a href="https://github.com/jp-wf/typescript-demo" target="_blank">https://github.com/jp-wf/typescript-demo</a></span>
