--- a/TypeScriptDemo/pages/type-declaration.html
+++ b/TypeScriptDemo/pages/type-declaration.html
@@ -188,3 +188,4 @@
         </table>
     </div>
 </div>
+<span class="footer-section">View the full source for this presentation at: <a href="https://github.com/jp-wf/typescript-demo" target="_blank">https://github.com/jp-wf/typescript-demo</a></span>
